# random-fish

./: AUTHORS.md  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  tox.ini
docs/: conf.py  index.rst
docs/modules/: random_fish.base.rst  random_fish.choice.rst  random_fish.collections.rst  random_fish.datetime.rst  random_fish.iterators.rst  random_fish.rst  random_fish.scalar.rst  random_fish.strings.rst  random_fish.structural.rst
examples/: __init__.py
examples/demo/: async.py  data.py  sync.py
examples/performance/: async.py  helpers.py  sync.py
random_fish/: __init__.py  base.py  choice.py  classes.py  collections.py  datetime.py  datetimes.py  iterators.py  presets.py  scalar.py  strings.py  structural.py
random_fish/async/: base.py  choice.py  classes.py  collections.py  datetimes.py  presets.py  scalar.py  strings.py
tests/: helpers.py  test_base.py  test_choice.py  test_collections.py  test_datetime.py  test_iterators.py  test_package.py  test_scalar.py  test_strings.py  test_structural.py
